# easydict_django

./: .gitignore  README.md  manage.py  pyproject.toml
easydict/: asgi.py  settings.py  urls.py  wsgi.py
utils/: from_txt_tinydb.py  from_txt_to_django.py  from_txt_to_rethinkdb.py  run_pgsql.bat
web/: apps.py  helpers.py  models.py  urls.py  views.py
web/migrations/: 0001_initial.py  0002_rename_cz_record_cze_rename_en_record_eng_and_more.py  0003_remove_record_translator_record_author.py  0004_alter_record_special_cze_alter_record_special_eng.py  0005_alter_record_special_cze_alter_record_special_eng.py  0006_alter_record_cze_alter_record_eng_and_more.py  0007_alter_record_cze_alter_record_eng.py  0008_alter_record_special_cze_alter_record_special_eng.py  0009_alter_record_notes_cze_alter_record_notes_eng.py  0010_alter_record_cze_alter_record_eng.py
web/static/web/brython/: ed_ajax.py
web/static/web/css/: my_styles.css  reset.css
web/static/web/js/: my_ajax.js
web/templates/web/: index_cze.html  index_eng.html
